--- a/landing page GG/style.css
+++ b/landing page GG/style.css
@@ -197,9 +197,7 @@ height: 550px;
 
 footer {
   background-color: rgb(41, 59, 50);
-  padding: 20px;
   text-align: center;
-  height: 400px;
 }
 
 .logo-text {
@@ -273,4 +271,10 @@ button{
 
 .faciliteiten-container {
   background-color: #dfd5c3;
+}
+
+
+#hunnebed{
+  background-color: green;
+  padding: 200px;
 }
